<resources>
   <string name="app_name">Flag Quiz</string>
   <string name="action_settings">Settings</string>
   <string name="number_of_choices">Number of Choices</string>
   <string name="number_of_choices_description">Display 2, 4, 6 or 8 guess buttons</string>
   <string name="world_regions">Regions</string>
   <string name="world_regions_description">Regions to include in the quiz</string>
   <string name="guess_country">Guess the Country</string>
   <string name="results">%1$d guesses, %2$.02f%% correct</string>
   <string name="incorrect_answer">Incorrect!</string>
   <string name="default_region_message">One region must be selected. Setting North America as the default region.</string>
   <string name="restarting_quiz">Quiz will restart with your new settings</string>
   <string name="question">Question %1$d of %2$d</string>
   <string name="reset_quiz">Reset Quiz</string>
   <string name="image_description">Image of the current flag in the quiz</string>
   <string name="default_region">North_America</string>
   <string name="title_activity_settings">Settings</string>


   <string name="Language"> Choice of language </string>
   <string name="Language_description"> The language which provides country names, captions, messages, and application name </string>
   <string name="default_lang_0">values</string>
   <string name="default_lang_1">uk-rUA</string>
   <string name="default_lang_2">values-ru-rRU</string>
   <string name="default_mes_0">Setting language save</string>
   <string name="default_mes_1">Налаштування мови збережено</string>
   <string name="default_mes_2">Настройки языка сохранены</string>
</resources>
